logs/meteo-downloader.log
Listing '.'...
Listing './bin'...
Compiling './bin/download.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (download.py, line 17)
Compiling './bin/meteogui.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (meteogui.py, line 144)
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ios'...
Compiling './lib/python3.5/site-packages/ios/FortranFormat.py'...
***   File "./lib/python3.5/site-packages/ios/FortranFormat.py", line 215
    s = `value`
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ios/readMeteoBlock.py'...
***   File "./lib/python3.5/site-packages/ios/readMeteoBlock.py", line 47
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/meteo_downloader-1.0.egg-info'...
Listing './lib/python3.5/site-packages/ncfile'...
Listing './lib/python3.5/site-packages/parse'...
Compiling './lib/python3.5/site-packages/parse/parse.py'...
***   File "./lib/python3.5/site-packages/parse/parse.py", line 21
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
